<resources>
    <string name="app_name">빠스 기사용</string>

    <!-- on boarding -->
    <string name="approved_by_administrator">관리자 승인중입니다.</string>
    <string name="approve_description">계정 가입 인증은 평균 1일 정도 소요됩니다.</string>

    <!-- Activity Titles -->
    <string name="bus_title">%s번 버스</string>
    <string name="driver_name">%s 기사님</string>
    <string name="greeting_attendance">오늘도 좋은 하루 되세요.</string>
    <string name="my_page_title">마이 페이지</string>

    <!-- Dialog Titles -->
    <string name="wait_title">대기</string>
    <string name="driving_title">버스 운행</string>
    <string name="riding_tile">승차</string>
    <string name="driving_finish_title">운행 종료</string>
    <string name="nfc_title">NFC 설정</string>
    <string name="logout_title">로그아웃 하시겠습니까?</string>
    <string name="withdraw_title">빠스 앱을 탈퇴하시겠습니까?</string>

    <!-- Dialog Messages -->
    <string name="driving_msg">%s번 버스를 운행합니다.</string>
    <string name="wait_msg">다음 정류장에서 교통약자 탑승 대기중입니다.</string>
    <string name="riding_msg">교통약자가 탑승을 완료하였습니다.</string>
    <string name="driving_finish_msg">%s번 버스 운행을 종료합니다.</string>
    <string name="nfc_msg">앱 사용을 위해 NFC 모드를 기본 모드로 설정해주세요. \n확인버튼을 누르면 설정으로 이동합니다.</string>
    <string name="api_source_msg">공공데이터 포털 국토교통부 국가교통정보</string>

    <!-- Hints -->
    <string name="nfc_hint">버스 운행을 위해 NFC 태그에 핸드폰을 태그해주세요.</string>

    <!-- Buttons -->
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_close">닫기</string>

    <!-- My page titles -->
    <string name="my_legal_notice">법적고지</string>
    <string name="my_api_source">정보 제공처</string>
    <string name="my_open_source_license">오픈소스 정보</string>
    <string name="my_logout">로그아웃</string>
    <string name="my_withdraw">회원 탈퇴</string>

    <!-- Notices -->
    <string name="wait_notice">%s 교통약자 탑승 대기중</string>

    <!-- Description -->
    <string name="des_img_bus_nfc">NFC 태그 안내 이미지입니다.</string>
    <string name="des_img_bus_stop">정류장을 표시하는 이미지입니다.</string>
    <string name="des_login_logo">로그인 페이지 로고 이미지입니다.</string>
    <string name="des_btn_mypage">마이페이지 버튼입니다.</string>
    <string name="des_btn_back">뒤로가기 버튼입니다.</string>

    <!-- Error -->
    <string name="error_driver_name">로그인 에러</string>
    <string name="error_bus_name">버스 번호 에러</string>
    <string name="error_title">예상치 못한 오류가 발생하였습니다.</string>
    <string name="error_message">다시 시도해 주세요.</string>
</resources>
