<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back"
            android:contentDescription="@string/des_btn_back"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_page_title"
            android:textAppearance="@style/text.h1"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back" />

        <View
            android:id="@+id/ul_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ul_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_legal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_legal_notice"
                    android:textAppearance="@style/text.h3"
                    android:textColor="@color/colorText"
                    android:gravity="start|center_vertical"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_api_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_api_source"
                    android:textAppearance="@style/text.h3"
                    android:textColor="@color/colorText"
                    android:gravity="start|center_vertical"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_open_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_open_source_license"
                    android:textAppearance="@style/text.h3"
                    android:textColor="@color/colorText"
                    android:gravity="start|center_vertical"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_logout"
                    android:textAppearance="@style/text.h3"
                    android:textColor="@color/colorText"
                    android:gravity="start|center_vertical"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_withdraw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_withdraw"
                    android:textAppearance="@style/text.h3"
                    android:textColor="@color/colorText"
                    android:gravity="start|center_vertical"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
